--- a/MooBoo/View/MooBooTrayApp.xaml
+++ b/MooBoo/View/MooBooTrayApp.xaml
@@ -5,4 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MooBoo"
         mc:Ignorable="d">
+    <Grid>
+    <TextBox x:Name="textBox" 
+             HorizontalAlignment="Left" 
+             Height="23" 
+             Margin="278,322,0,0" 
+             TextWrapping="Wrap" 
+             Text="{Binding Path=ApiTokenProperty, UpdateSourceTrigger=PropertyChanged,  Mode=TwoWay}"
+             VerticalAlignment="Top" Width="364"/>
+    </Grid>
 </Window>
