--- a/MooBoo/App.xaml
+++ b/MooBoo/App.xaml
@@ -1,9 +1,5 @@
 ﻿<Application x:Class="MooBoo.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:MooBoo"
-             StartupUri="View/MooBooTrayApp.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
+             ShutdownMode="OnExplicitShutdown">
 </Application>
